[project]
name = "ros2-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "ChenYing Kuo",email = "evshary@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.19,<10.0.0)",
    "pymdown-extensions (>=10.16.1,<11.0.0)"
]

[tool.uv]
package = false
